fix: increase spacing for hover effect

--- a/Movie-Web/src/styles/components/trending.css
+++ b/Movie-Web/src/styles/components/trending.css
@@ -3,7 +3,7 @@
 .trending {
   @apply mt-10;
   overflow: hidden;
-  padding-top: 30px;
+  padding-top: 50px;
 
   & h2 {
     margin-bottom: 1rem;
